2013-01-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Customization Variables)
	<TEXINFO_COLUMN_FOR_DESCRIPTION>: new.
	<TREE_TRANSFORMATIONS>: add indent_menu_descriptions.
	Also, use it to re-indent the menus and regenerate_master_menu.

2013-01-21  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Raw Formatter Commands): be more emphatic
	about some processing being done inside raw regions,
	and the resulting unpredictable effects when Texinfo-level
	things are done there.

2013-01-20  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Customization Variables)
	[TREE_TRANSFORMATIONS]: @ftable, text tweaks.
	(Top): update with texinfo-master-menu.

	* doc/info-stnd.texi: @t in node names, merge footnote text
	where reasonable.

2013-01-19  Patrice Dumas  <pertusus@free.fr>

	* util/texinfo.dtd: add number attribute for float and indexterm.

2013-01-19  Karl Berry  <karl@gnu.org>

	* pretest 4.13.94.
	
	* README-hacking: tersely describe release steps.

2013-01-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Customization Variables for Program Behavior)
	[TEXINFOSXML]: new output format.
	* tp/Makefile.am (dist_converters_DATA): add TexinfoSXML.pm.

2013-01-16  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/TexinfoXML.pm: replace tp/Texinfo/Convert/XML.pm.

2013-01-16  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Marking Text): remaining node names needing @t.

2013-01-15  Karl Berry  <karl@gnu.org>

	* po_document/LINGUAS: es.us-ascii is back, paperwork executed
	by Francisco Vila <paconet.org@gmail.com>.

	* doc/texinfo.txi: use @t instead of @code in node names,
	to avoid extraneous quotes.

2013-01-15  Patrice Dumas  <pertusus@free.fr>

	* autogen.sh: adapt to shorter regenerate_docstr.sh 
	and Makefile.docstr names.

2013-01-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Conditionally Visible Text,
	Defining New Texinfo Commands,
	Formatting and Printing Hardcopy,
	Creating an Info File): node names with @.